[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/endNode.gd" type="Script" id=1]

[node name="endNode" type="GraphNode"]
margin_left = 1.32684
margin_top = 1.32684
margin_right = 330.327
margin_bottom = 132.327
title = "End node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 313.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 313.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 30 )
[connection signal="close_request" from="." to="." method="_on_endNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_endNode_resize_request"]
